# telegram-qt

./: .gitignore  CMakeLists.txt
TelegramQt/: ApiUtils.cpp  ApiUtils.hpp  CMakeLists.txt  CTelegramStream.hpp  ConnectionApi.cpp  DataStorage.cpp  DataStorage_p.hpp  MessagingApi.cpp  MessagingApi.hpp  MessagingApi_p.hpp  TelegramNamespace.cpp  UpdatesLayer.cpp
TelegramQt/tests/tst_utils/: tst_utils.cpp
clients/: CMakeLists.txt
clients/connection/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
clients/qml-client/models/: DialogsModel.cpp  DialogsModel.hpp  MessagesModel.cpp  MessagesModel.hpp
clients/widgets/: CContactModel.cpp  CMakeLists.txt  CMessageModel.cpp  CMessageModel.hpp  MainWindow.cpp  MainWindow.hpp
imports/TelegramQtQml/: CMakeLists.txt  DeclarativeClient.cpp  DeclarativeClient.hpp
server/: CMakeLists.txt  LocalCluster.cpp  ServerApi.hpp  ServerNamespace.hpp  ServerUtils.cpp  Storage.cpp  Storage.hpp  TelegramServer.cpp  TelegramServer.hpp  TelegramServerUser.cpp  TelegramServerUser.hpp  main.cpp
server/RpcOperations/: MessagesOperationFactory.cpp
tests/tst_MessagesApi/: tst_MessagesApi.cpp
